WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58153
[chromium] Fix windows assertion on ~CCThread
https://bugs.webkit.org/show_bug.cgi?id=58153
Summary
[chromium] Fix windows assertion on ~CCThread
Nat Duca
Reported
2011-04-08 12:50:12 PDT
[chromium] Fix windows assertion on ~CCThread
Attachments
Patch
(1.27 KB, patch)
2011-04-08 12:54 PDT
,
Nat Duca
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nat Duca
Comment 1
2011-04-08 12:54:08 PDT
Created
attachment 88861
[details]
Patch
WebKit Commit Bot
Comment 2
2011-04-08 18:36:50 PDT
Comment on
attachment 88861
[details]
Patch Clearing flags on attachment: 88861 Committed
r83370
: <
http://trac.webkit.org/changeset/83370
>
WebKit Commit Bot
Comment 3
2011-04-08 18:36:56 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 4
2011-04-08 18:39:54 PDT
The commit-queue encountered the following flaky tests while processing
attachment 88861
[details]
: java/lc3/JSObject/ToObject-001.html
bug 53091
(author:
ap@webkit.org
) The commit-queue is continuing to process your patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug