2011-04-08  Nat Duca  <nduca@chromium.org>

Reviewed by David Levin.

        [chromium] Fix windows assertion on ~CCThread
        https://bugs.webkit.org/show_bug.cgi?id=58153

        Because ~CCThread uses waitForThreadCompletion,
        calling detachThread is not necessary.

        * platform/graphics/chromium/cc/CCThread.cpp:
        (WebCore::CCThread::runLoop):

Canonical link: https://commits.webkit.org/73142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83370 268f45cc-cd09-0410-ab3c-d52691b4dbfc